--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -19,104 +19,118 @@
     "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
     "    \n",
-    "    # Create a new workbook and the \"Paste\" sheet\n",
-    "    wb = Workbook()\n",
-    "    ws = wb.active\n",
-    "    ws.title = \"Paste\"\n",
+    "    # Create an empty DataFrame to collect all data for the \"Paste\" sheet\n",
+    "    paste_df = pd.DataFrame(columns=[\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "                                     \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
-    "    # Define the headers for the \"Paste\" sheet\n",
-    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
-    "    ws.append(headers)  # Write headers to the first row\n",
+    "    # Helper function to add a row of data to the paste_df\n",
+    "    def append_data(sheet_name, entity, function, account, attribute_type, period_value, cost_value, fte_value):\n",
+    "        row_data = [sheet_name, '', '', '', '', '', attribute_type, period_value, \n",
+    "                    cost_value if cost_value != '' else None, \n",
+    "                    fte_value if fte_value != '' else None, '', '', '', entity, function, '', account]\n",
+    "        paste_df.loc[len(paste_df)] = row_data\n",
     "\n",
+    "    # Process each sheet\n",
     "    for sheet_name in xls.sheet_names:\n",
-    "        # Process sheets containing 'Actual', 'Target', or 'Fcst'\n",
+    "        # Only process sheets containing 'Actual', 'Target', or 'Fcst'\n",
     "        if re.search(r'Actual|Target|Fcst', sheet_name, re.IGNORECASE):\n",
     "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "\n",
-    "            # Identify cost type\n",
+    "            # Extract relevant columns\n",
+    "            entity_col = sheet['Entity'] if 'Entity' in sheet.columns else None\n",
+    "            function_col = sheet['RTN Level 4'] if 'RTN Level 4' in sheet.columns else None\n",
+    "            account_col = sheet['Account'] if 'Account' in sheet.columns else None\n",
+    "\n",
+    "            # Identify cost type (DC for Cost, HC for FTE/Contractor)\n",
     "            cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor'\n",
     "\n",
-    "            # Handling MoM (Last 3 Months Data)\n",
-    "            month_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
-    "            for month_col in month_columns:\n",
-    "                month_num = int(month_col[1:3])\n",
-    "                year = int(month_col[3:]) if len(month_col) > 3 else current_year\n",
+    "            # 1. MoM (Last 3 Months Data)\n",
+    "            for month_col in sheet.columns:\n",
+    "                if re.match(r'M\\d{2}', month_col):\n",
+    "                    month_num = int(month_col[1:3])\n",
+    "                    year = int(month_col[3:]) if len(month_col) > 3 else current_year\n",
     "\n",
-    "                # Check if the month falls within the last 3 months\n",
-    "                if ((current_month - month_num) % 12 in [0, 1, 2]) and year == current_year:\n",
-    "                    period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, \n",
-    "                                sheet[month_col].sum() if cost_type == 'Cost' else '', \n",
-    "                                sheet[month_col].sum() if cost_type == 'FTE/Contractor' else '', \n",
-    "                                '', '', '', '', '', ''])\n",
+    "                    # Check if the month falls within the last 3 months\n",
+    "                    if ((current_month - month_num) % 12 in [0, 1, 2]) and year == current_year:\n",
+    "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
     "\n",
-    "            # Handling FY Target\n",
+    "                        for idx, row in sheet.iterrows():\n",
+    "                            append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                        'MoM', period_value, \n",
+    "                                        row[month_col] if cost_type == 'Cost' else None, \n",
+    "                                        row[month_col] if cost_type == 'FTE/Contractor' else None)\n",
+    "\n",
+    "            # 2. FY Target\n",
     "            if 'Target' in sheet_name:\n",
     "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
     "                for col in fy_col:\n",
     "                    period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, \n",
-    "                                sheet[col].sum() if cost_type == 'Cost' else '', \n",
-    "                                sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
-    "                                '', '', '', '', '', ''])\n",
     "\n",
-    "            # Handling FY Forecast\n",
+    "                    for idx, row in sheet.iterrows():\n",
+    "                        append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                    'FY Target', period_value, \n",
+    "                                    row[col] if cost_type == 'Cost' else None, \n",
+    "                                    row[col] if cost_type == 'FTE/Contractor' else None)\n",
+    "\n",
+    "            # 3. FY Forecast\n",
     "            if 'Fcst' in sheet_name:\n",
     "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
     "                for col in fy_col:\n",
     "                    period_value = f\"Dec-{str(current_year)[-2:]}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, \n",
-    "                                sheet[col].sum() if cost_type == 'Cost' else '', \n",
-    "                                sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
-    "                                '', '', '', '', '', ''])\n",
     "\n",
-    "            # Handling YTD (YTD Target, YTD Forecast, YTD Actual)\n",
-    "            ytd_total = 0\n",
-    "            for month_col in month_columns:\n",
-    "                month_num = int(month_col[1:3])\n",
-    "                if month_num <= current_month:\n",
-    "                    ytd_total += sheet[month_col].sum() if sheet[month_col].notna().any() else 0\n",
+    "                    for idx, row in sheet.iterrows():\n",
+    "                        append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                    'FY Forecast', period_value, \n",
+    "                                    row[col] if cost_type == 'Cost' else None, \n",
+    "                                    row[col] if cost_type == 'FTE/Contractor' else None)\n",
     "\n",
-    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "            if 'Target' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'YTD Target', period_value, \n",
-    "                            ytd_total if cost_type == 'Cost' else '', \n",
-    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
-    "                            '', '', '', '', '', ''])\n",
-    "            elif 'Fcst' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'YTD Forecast', period_value, \n",
-    "                            ytd_total if cost_type == 'Cost' else '', \n",
-    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
-    "                            '', '', '', '', '', ''])\n",
-    "            elif 'Actual' in sheet_name:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, \n",
-    "                            ytd_total if cost_type == 'Cost' else '', \n",
-    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
-    "                            '', '', '', '', '', ''])\n",
+    "            # 4. YTD (YTD Target, YTD Forecast, YTD Actual)\n",
+    "            ytd_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col) and int(col[1:3]) <= current_month]\n",
     "\n",
-    "            # Handling Prior Year FY\n",
+    "            for idx, row in sheet.iterrows():\n",
+    "                ytd_total = row[ytd_columns].sum(skipna=True)\n",
+    "\n",
+    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                if 'Target' in sheet_name:\n",
+    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                'YTD Target', period_value, \n",
+    "                                ytd_total if cost_type == 'Cost' else None, \n",
+    "                                ytd_total if cost_type == 'FTE/Contractor' else None)\n",
+    "                elif 'Fcst' in sheet_name:\n",
+    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                'YTD Forecast', period_value, \n",
+    "                                ytd_total if cost_type == 'Cost' else None, \n",
+    "                                ytd_total if cost_type == 'FTE/Contractor' else None)\n",
+    "                elif 'Actual' in sheet_name:\n",
+    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                'YTD Actual', period_value, \n",
+    "                                ytd_total if cost_type == 'Cost' else None, \n",
+    "                                ytd_total if cost_type == 'FTE/Contractor' else None)\n",
+    "\n",
+    "            # 5. Prior Year FY\n",
     "            prior_year_fy_col = [col for col in sheet.columns if f'FY {current_year - 1}' in col]\n",
     "            for col in prior_year_fy_col:\n",
     "                period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, \n",
-    "                            sheet[col].sum() if cost_type == 'Cost' else '', \n",
-    "                            sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
-    "                            '', '', '', '', '', ''])\n",
+    "                for idx, row in sheet.iterrows():\n",
+    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                'Prior Year FY', period_value, \n",
+    "                                row[col] if cost_type == 'Cost' else None, \n",
+    "                                row[col] if cost_type == 'FTE/Contractor' else None)\n",
     "\n",
-    "            # Handling Prior Year YTD\n",
+    "            # 6. Prior Year YTD\n",
     "            prior_year_ytd_col = [col for col in sheet.columns if f'YTD {current_year - 1}' in col]\n",
     "            for col in prior_year_ytd_col:\n",
     "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, \n",
-    "                            sheet[col].sum() if cost_type == 'Cost' else '', \n",
-    "                            sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
-    "                            '', '', '', '', '', ''])\n",
+    "                for idx, row in sheet.iterrows():\n",
+    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
+    "                                'Prior Year YTD', period_value, \n",
+    "                                row[col] if cost_type == 'Cost' else None, \n",
+    "                                row[col] if cost_type == 'FTE/Contractor' else None)\n",
     "\n",
-    "    # Save the final workbook\n",
-    "    wb.save('final_output_file.xlsx')\n",
+    "    # Once all data is processed, write the DataFrame to an Excel file\n",
+    "    paste_df.to_excel('final_output_file.xlsx', sheet_name='Paste', index=False)\n",
     "\n",
     "# Example usage\n",
     "current_month = 6  # Example: June\n",
