--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "from openpyxl import Workbook\n",
     "\n",
     "def month_number_to_name(month):\n",
     "    \"\"\"Convert month number to abbreviated month name.\"\"\"\n",
@@ -25,111 +24,110 @@
     "                                     \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
     "                                     \"Function\", \"Mapped Country\", \"MICA\"])\n",
     "\n",
-    "    # Helper function to add a row of data to the paste_df\n",
-    "    def append_data(sheet_name, entity, function, account, attribute_type, period_value, cost_value, fte_value):\n",
-    "        row_data = [sheet_name, '', '', '', '', '', attribute_type, period_value, \n",
-    "                    cost_value if cost_value != '' else None, \n",
-    "                    fte_value if fte_value != '' else None, '', '', '', entity, function, '', account]\n",
-    "        paste_df.loc[len(paste_df)] = row_data\n",
-    "\n",
     "    # Process each sheet\n",
     "    for sheet_name in xls.sheet_names:\n",
     "        # Only process sheets containing 'Actual', 'Target', or 'Fcst'\n",
     "        if re.search(r'Actual|Target|Fcst', sheet_name, re.IGNORECASE):\n",
-    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "            # Only load required columns from the sheet\n",
+    "            sheet = pd.read_excel(xls, sheet_name=sheet_name, usecols=lambda x: re.match(r'Entity|RTN Level 4|Account|M\\d{2}|FY|YTD', x))\n",
+    "\n",
+    "            # Ensure relevant columns exist\n",
+    "            if not {'Entity', 'RTN Level 4', 'Account'}.issubset(sheet.columns):\n",
+    "                continue\n",
     "\n",
     "            # Extract relevant columns\n",
-    "            entity_col = sheet['Entity'] if 'Entity' in sheet.columns else None\n",
-    "            function_col = sheet['RTN Level 4'] if 'RTN Level 4' in sheet.columns else None\n",
-    "            account_col = sheet['Account'] if 'Account' in sheet.columns else None\n",
+    "            entity_col = sheet['Entity']\n",
+    "            function_col = sheet['RTN Level 4']\n",
+    "            account_col = sheet['Account']\n",
     "\n",
     "            # Identify cost type (DC for Cost, HC for FTE/Contractor)\n",
     "            cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor'\n",
     "\n",
     "            # 1. MoM (Last 3 Months Data)\n",
-    "            for month_col in sheet.columns:\n",
-    "                if re.match(r'M\\d{2}', month_col):\n",
-    "                    month_num = int(month_col[1:3])\n",
-    "                    year = int(month_col[3:]) if len(month_col) > 3 else current_year\n",
+    "            month_cols = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
+    "            for month_col in month_cols:\n",
+    "                month_num = int(month_col[1:3])\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(current_year)[-2:]}\"\n",
     "\n",
-    "                    # Check if the month falls within the last 3 months\n",
-    "                    if ((current_month - month_num) % 12 in [0, 1, 2]) and year == current_year:\n",
-    "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
+    "                if (current_month - month_num) % 12 in [0, 1, 2]:\n",
+    "                    paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                        'File Name': sheet_name,\n",
+    "                        'Entity': entity_col,\n",
+    "                        'Function': function_col,\n",
+    "                        'Account': account_col,\n",
+    "                        'Attribute Type': 'MoM',\n",
+    "                        'Period': period_value,\n",
+    "                        cost_type: sheet[month_col]\n",
+    "                    })], ignore_index=True)\n",
     "\n",
-    "                        for idx, row in sheet.iterrows():\n",
-    "                            append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                        'MoM', period_value, \n",
-    "                                        row[month_col] if cost_type == 'Cost' else None, \n",
-    "                                        row[month_col] if cost_type == 'FTE/Contractor' else None)\n",
+    "            # 2. YTD (Summing up values up to current month)\n",
+    "            ytd_cols = [col for col in sheet.columns if re.match(r'M\\d{2}', col) and int(col[1:3]) <= current_month]\n",
+    "            if ytd_cols:\n",
+    "                sheet['YTD Total'] = sheet[ytd_cols].sum(axis=1)\n",
     "\n",
-    "            # 2. FY Target\n",
-    "            if 'Target' in sheet_name:\n",
-    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
-    "                for col in fy_col:\n",
-    "                    period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "\n",
-    "                    for idx, row in sheet.iterrows():\n",
-    "                        append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                    'FY Target', period_value, \n",
-    "                                    row[col] if cost_type == 'Cost' else None, \n",
-    "                                    row[col] if cost_type == 'FTE/Contractor' else None)\n",
-    "\n",
-    "            # 3. FY Forecast\n",
-    "            if 'Fcst' in sheet_name:\n",
-    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
-    "                for col in fy_col:\n",
-    "                    period_value = f\"Dec-{str(current_year)[-2:]}\"\n",
-    "\n",
-    "                    for idx, row in sheet.iterrows():\n",
-    "                        append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                    'FY Forecast', period_value, \n",
-    "                                    row[col] if cost_type == 'Cost' else None, \n",
-    "                                    row[col] if cost_type == 'FTE/Contractor' else None)\n",
-    "\n",
-    "            # 4. YTD (YTD Target, YTD Forecast, YTD Actual)\n",
-    "            ytd_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col) and int(col[1:3]) <= current_month]\n",
-    "\n",
-    "            for idx, row in sheet.iterrows():\n",
-    "                ytd_total = row[ytd_columns].sum(skipna=True)\n",
-    "\n",
-    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                ytd_period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
     "                if 'Target' in sheet_name:\n",
-    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                'YTD Target', period_value, \n",
-    "                                ytd_total if cost_type == 'Cost' else None, \n",
-    "                                ytd_total if cost_type == 'FTE/Contractor' else None)\n",
+    "                    paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                        'File Name': sheet_name,\n",
+    "                        'Entity': entity_col,\n",
+    "                        'Function': function_col,\n",
+    "                        'Account': account_col,\n",
+    "                        'Attribute Type': 'YTD Target',\n",
+    "                        'Period': ytd_period_value,\n",
+    "                        cost_type: sheet['YTD Total']\n",
+    "                    })], ignore_index=True)\n",
+    "\n",
     "                elif 'Fcst' in sheet_name:\n",
-    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                'YTD Forecast', period_value, \n",
-    "                                ytd_total if cost_type == 'Cost' else None, \n",
-    "                                ytd_total if cost_type == 'FTE/Contractor' else None)\n",
+    "                    paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                        'File Name': sheet_name,\n",
+    "                        'Entity': entity_col,\n",
+    "                        'Function': function_col,\n",
+    "                        'Account': account_col,\n",
+    "                        'Attribute Type': 'YTD Forecast',\n",
+    "                        'Period': ytd_period_value,\n",
+    "                        cost_type: sheet['YTD Total']\n",
+    "                    })], ignore_index=True)\n",
+    "\n",
     "                elif 'Actual' in sheet_name:\n",
-    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                'YTD Actual', period_value, \n",
-    "                                ytd_total if cost_type == 'Cost' else None, \n",
-    "                                ytd_total if cost_type == 'FTE/Contractor' else None)\n",
+    "                    paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                        'File Name': sheet_name,\n",
+    "                        'Entity': entity_col,\n",
+    "                        'Function': function_col,\n",
+    "                        'Account': account_col,\n",
+    "                        'Attribute Type': 'YTD Actual',\n",
+    "                        'Period': ytd_period_value,\n",
+    "                        cost_type: sheet['YTD Total']\n",
+    "                    })], ignore_index=True)\n",
     "\n",
-    "            # 5. Prior Year FY\n",
-    "            prior_year_fy_col = [col for col in sheet.columns if f'FY {current_year - 1}' in col]\n",
-    "            for col in prior_year_fy_col:\n",
-    "                period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
-    "                for idx, row in sheet.iterrows():\n",
-    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                'Prior Year FY', period_value, \n",
-    "                                row[col] if cost_type == 'Cost' else None, \n",
-    "                                row[col] if cost_type == 'FTE/Contractor' else None)\n",
+    "            # 3. Prior Year FY\n",
+    "            prior_fy_cols = [col for col in sheet.columns if f'FY {current_year - 1}' in col]\n",
+    "            for prior_fy_col in prior_fy_cols:\n",
+    "                prior_fy_period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
+    "                paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                    'File Name': sheet_name,\n",
+    "                    'Entity': entity_col,\n",
+    "                    'Function': function_col,\n",
+    "                    'Account': account_col,\n",
+    "                    'Attribute Type': 'Prior Year FY',\n",
+    "                    'Period': prior_fy_period_value,\n",
+    "                    cost_type: sheet[prior_fy_col]\n",
+    "                })], ignore_index=True)\n",
     "\n",
-    "            # 6. Prior Year YTD\n",
-    "            prior_year_ytd_col = [col for col in sheet.columns if f'YTD {current_year - 1}' in col]\n",
-    "            for col in prior_year_ytd_col:\n",
-    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
-    "                for idx, row in sheet.iterrows():\n",
-    "                    append_data(sheet_name, entity_col[idx], function_col[idx], account_col[idx], \n",
-    "                                'Prior Year YTD', period_value, \n",
-    "                                row[col] if cost_type == 'Cost' else None, \n",
-    "                                row[col] if cost_type == 'FTE/Contractor' else None)\n",
+    "            # 4. Prior Year YTD\n",
+    "            prior_ytd_cols = [col for col in sheet.columns if f'YTD {current_year - 1}' in col]\n",
+    "            for prior_ytd_col in prior_ytd_cols:\n",
+    "                prior_ytd_period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
+    "                paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                    'File Name': sheet_name,\n",
+    "                    'Entity': entity_col,\n",
+    "                    'Function': function_col,\n",
+    "                    'Account': account_col,\n",
+    "                    'Attribute Type': 'Prior Year YTD',\n",
+    "                    'Period': prior_ytd_period_value,\n",
+    "                    cost_type: sheet[prior_ytd_col]\n",
+    "                })], ignore_index=True)\n",
     "\n",
-    "    # Once all data is processed, write the DataFrame to an Excel file\n",
+    "    # Write the final DataFrame to an Excel file\n",
     "    paste_df.to_excel('final_output_file.xlsx', sheet_name='Paste', index=False)\n",
     "\n",
     "# Example usage\n",
