--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,6 +3,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f898867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "def month_number_to_name(month):\n",
+    "    \"\"\"Convert month number to abbreviated month name.\"\"\"\n",
+    "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
+    "\n",
+    "def process_mom_data(processed_file_path, current_month, current_year):\n",
+    "    # Load the processed file\n",
+    "    xls = pd.ExcelFile(processed_file_path)\n",
+    "    \n",
+    "    # Create an empty DataFrame to collect all data for the \"Paste\" sheet\n",
+    "    paste_df = pd.DataFrame(columns=[\"File Name\", \"Entity\", \"Function\", \"Account\", \"Attribute Type\", \"Period\", \"Cost\", \"FTE/Contractor\"])\n",
+    "\n",
+    "    # Process each sheet\n",
+    "    for sheet_name in xls.sheet_names:\n",
+    "        # Only process sheets containing 'Actual', 'Target', or 'Fcst'\n",
+    "        if re.search(r'Actual|Target|Fcst', sheet_name, re.IGNORECASE):\n",
+    "            # Only load required columns from the sheet\n",
+    "            sheet = pd.read_excel(xls, sheet_name=sheet_name, usecols=lambda x: re.match(r'Entity|RTN Level 4|Account|M\\d{2}', x))\n",
+    "\n",
+    "            # Ensure relevant columns exist\n",
+    "            if not {'Entity', 'RTN Level 4', 'Account'}.issubset(sheet.columns):\n",
+    "                continue\n",
+    "\n",
+    "            # Extract relevant columns\n",
+    "            entity_col = sheet['Entity']\n",
+    "            function_col = sheet['RTN Level 4']\n",
+    "            account_col = sheet['Account']\n",
+    "\n",
+    "            # Identify cost type (DC for Cost, HC for FTE/Contractor)\n",
+    "            cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor'\n",
+    "\n",
+    "            # Find last 3 months' data based on the current month\n",
+    "            month_cols = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
+    "            for month_col in month_cols:\n",
+    "                month_num = int(month_col[1:3])  # Extract month number\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(current_year)[-2:]}\"  # Format period as \"Mon-YY\"\n",
+    "\n",
+    "                # Ensure the month is within the last 3 months\n",
+    "                if (current_month - month_num) % 12 in [0, 1, 2]:\n",
+    "                    # Append the data row by row into the DataFrame\n",
+    "                    paste_df = pd.concat([paste_df, pd.DataFrame({\n",
+    "                        'File Name': sheet_name,\n",
+    "                        'Entity': entity_col,\n",
+    "                        'Function': function_col,\n",
+    "                        'Account': account_col,\n",
+    "                        'Attribute Type': 'MoM',\n",
+    "                        'Period': period_value,\n",
+    "                        cost_type: sheet[month_col]\n",
+    "                    })], ignore_index=True)\n",
+    "\n",
+    "    # Write the final DataFrame to an Excel file\n",
+    "    paste_df.to_excel('mom_output_file.xlsx', sheet_name='Paste', index=False)\n",
+    "\n",
+    "# Example usage\n",
+    "current_month = 6  # Example: June\n",
+    "current_year = 2024  # Example: Current year\n",
+    "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
+    "process_mom_data(processed_file_path, current_month, current_year)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9e03dcc3",
    "metadata": {},
    "outputs": [],
