--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f898867",
+   "id": "b68cd377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,59 +14,110 @@
     "    \"\"\"Convert month number to abbreviated month name.\"\"\"\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
+    "def get_last_three_months(current_month, current_year):\n",
+    "    \"\"\"Return tuples of the last three months with their years.\"\"\"\n",
+    "    months_years = []\n",
+    "    for i in range(3):\n",
+    "        month = (current_month - i) % 12 or 12\n",
+    "        year = current_year if month <= current_month else current_year - 1\n",
+    "        months_years.append((month, year))\n",
+    "    return list(reversed(months_years))\n",
+    "\n",
+    "def get_mom_data(sheet, current_month, current_year):\n",
+    "    \"\"\"Extract the MoM data from a given sheet.\"\"\"\n",
+    "    # Get the last three months\n",
+    "    last_three_months = get_last_three_months(current_month, current_year)\n",
+    "    \n",
+    "    mom_columns = []\n",
+    "    for col in sheet.columns:\n",
+    "        match = re.match(r'M(\\d{2}) (\\d{4})', col)  # Match Mxx YYYY pattern\n",
+    "        if match:\n",
+    "            month_num = int(match.group(1))  # Extract month number\n",
+    "            year = int(match.group(2))  # Extract year\n",
+    "            if (month_num, year) in last_three_months:\n",
+    "                mom_columns.append(col)\n",
+    "\n",
+    "    return mom_columns\n",
+    "\n",
     "def process_mom_data(processed_file_path, current_month, current_year):\n",
     "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
     "    \n",
-    "    # Create an empty DataFrame to collect all data for the \"Paste\" sheet\n",
-    "    paste_df = pd.DataFrame(columns=[\"File Name\", \"Entity\", \"Function\", \"Account\", \"Attribute Type\", \"Period\", \"Cost\", \"FTE/Contractor\"])\n",
+    "    # DataFrame to store MoM data with all columns\n",
+    "    paste_df = pd.DataFrame(columns=[\n",
+    "        \"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "        \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "        \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "        \"Function\", \"Mapped Country\", \"MICA\"\n",
+    "    ])\n",
     "\n",
-    "    # Process each sheet\n",
     "    for sheet_name in xls.sheet_names:\n",
-    "        # Only process sheets containing 'Actual', 'Target', or 'Fcst'\n",
-    "        if re.search(r'Actual|Target|Fcst', sheet_name, re.IGNORECASE):\n",
-    "            # Only load required columns from the sheet\n",
-    "            sheet = pd.read_excel(xls, sheet_name=sheet_name, usecols=lambda x: re.match(r'Entity|RTN Level 4|Account|M\\d{2}', x))\n",
+    "        if 'Actual' in sheet_name.lower():\n",
+    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "            mom_columns = get_mom_data(sheet, current_month, current_year)\n",
     "\n",
-    "            # Ensure relevant columns exist\n",
-    "            if not {'Entity', 'RTN Level 4', 'Account'}.issubset(sheet.columns):\n",
-    "                continue\n",
+    "            # Iterate over rows and extract relevant data\n",
+    "            for index, row in sheet.iterrows():\n",
+    "                entity = row.get('Entity', '')\n",
+    "                function = row.get('RTN Level 4', '')\n",
+    "                mica = row.get('Account', '')\n",
     "\n",
-    "            # Extract relevant columns\n",
-    "            entity_col = sheet['Entity']\n",
-    "            function_col = sheet['RTN Level 4']\n",
-    "            account_col = sheet['Account']\n",
+    "                for col in mom_columns:\n",
+    "                    month_num, year = map(int, re.findall(r'\\d+', col))\n",
+    "                    period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
     "\n",
-    "            # Identify cost type (DC for Cost, HC for FTE/Contractor)\n",
-    "            cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor'\n",
+    "                    if 'DC' in sheet_name:\n",
+    "                        paste_df = paste_df.append({\n",
+    "                            \"File Name\": sheet_name,\n",
+    "                            \"Level 3\": '',\n",
+    "                            \"Level 4\": '',\n",
+    "                            \"Cost Grouping\": '',\n",
+    "                            \"Cost Type\": '',\n",
+    "                            \"Finance Region\": '',\n",
+    "                            \"Attribute Type\": 'MoM',\n",
+    "                            \"Period\": period_value,\n",
+    "                            \"Cost\": row[col],\n",
+    "                            \"FTE/Contractor\": '',\n",
+    "                            \"Country\": '',\n",
+    "                            \"Level 3.5\": '',\n",
+    "                            \"Level 4.5\": '',\n",
+    "                            \"Entity\": entity,\n",
+    "                            \"Function\": function,\n",
+    "                            \"Mapped Country\": '',\n",
+    "                            \"MICA\": mica\n",
+    "                        }, ignore_index=True)\n",
+    "                    elif 'HC' in sheet_name:\n",
+    "                        paste_df = paste_df.append({\n",
+    "                            \"File Name\": sheet_name,\n",
+    "                            \"Level 3\": '',\n",
+    "                            \"Level 4\": '',\n",
+    "                            \"Cost Grouping\": '',\n",
+    "                            \"Cost Type\": '',\n",
+    "                            \"Finance Region\": '',\n",
+    "                            \"Attribute Type\": 'MoM',\n",
+    "                            \"Period\": period_value,\n",
+    "                            \"Cost\": '',\n",
+    "                            \"FTE/Contractor\": row[col],\n",
+    "                            \"Country\": '',\n",
+    "                            \"Level 3.5\": '',\n",
+    "                            \"Level 4.5\": '',\n",
+    "                            \"Entity\": entity,\n",
+    "                            \"Function\": function,\n",
+    "                            \"Mapped Country\": '',\n",
+    "                            \"MICA\": mica\n",
+    "                        }, ignore_index=True)\n",
     "\n",
-    "            # Find last 3 months' data based on the current month\n",
-    "            month_cols = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
-    "            for month_col in month_cols:\n",
-    "                month_num = int(month_col[1:3])  # Extract month number\n",
-    "                period_value = f\"{month_number_to_name(month_num)}-{str(current_year)[-2:]}\"  # Format period as \"Mon-YY\"\n",
-    "\n",
-    "                # Ensure the month is within the last 3 months\n",
-    "                if (current_month - month_num) % 12 in [0, 1, 2]:\n",
-    "                    # Append the data row by row into the DataFrame\n",
-    "                    paste_df = pd.concat([paste_df, pd.DataFrame({\n",
-    "                        'File Name': sheet_name,\n",
-    "                        'Entity': entity_col,\n",
-    "                        'Function': function_col,\n",
-    "                        'Account': account_col,\n",
-    "                        'Attribute Type': 'MoM',\n",
-    "                        'Period': period_value,\n",
-    "                        cost_type: sheet[month_col]\n",
-    "                    })], ignore_index=True)\n",
-    "\n",
-    "    # Write the final DataFrame to an Excel file\n",
-    "    paste_df.to_excel('mom_output_file.xlsx', sheet_name='Paste', index=False)\n",
+    "    # Return the final DataFrame\n",
+    "    return paste_df\n",
     "\n",
     "# Example usage\n",
-    "current_month = 6  # Example: June\n",
-    "current_year = 2024  # Example: Current year\n",
+    "current_month = 4  # April\n",
+    "current_year = 2024\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
-    "process_mom_data(processed_file_path, current_month, current_year)\n"
+    "paste_df = process_mom_data(processed_file_path, current_month, current_year)\n",
+    "\n",
+    "# Now you can write the DataFrame to a new sheet\n",
+    "paste_df.to_excel('Paste_MoM.xlsx', index=False)\n"
    ]
   },
   {
