--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b68cd377",
+   "id": "4cf927a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,33 @@
     "        months_years.append((month, year))\n",
     "    return list(reversed(months_years))\n",
     "\n",
+    "def append_data_to_df(paste_df, sheet_name, period_value, row_value, entity, function, mica, cost_type):\n",
+    "    \"\"\"Append data to the DataFrame based on cost type (DC or HC).\"\"\"\n",
+    "    paste_row = {\n",
+    "        \"File Name\": sheet_name,\n",
+    "        \"Level 3\": '',\n",
+    "        \"Level 4\": '',\n",
+    "        \"Cost Grouping\": '',\n",
+    "        \"Cost Type\": '',\n",
+    "        \"Finance Region\": '',\n",
+    "        \"Attribute Type\": 'MoM',  # We'll modify this later for other attribute types\n",
+    "        \"Period\": period_value,\n",
+    "        \"Cost\": row_value if cost_type == 'Cost' else '',\n",
+    "        \"FTE/Contractor\": row_value if cost_type == 'FTE/Contractor' else '',\n",
+    "        \"Country\": '',\n",
+    "        \"Level 3.5\": '',\n",
+    "        \"Level 4.5\": '',\n",
+    "        \"Entity\": entity,\n",
+    "        \"Function\": function,\n",
+    "        \"Mapped Country\": '',\n",
+    "        \"MICA\": mica\n",
+    "    }\n",
+    "    paste_df = paste_df.append(paste_row, ignore_index=True)\n",
+    "    return paste_df\n",
+    "\n",
     "def get_mom_data(sheet, current_month, current_year):\n",
     "    \"\"\"Extract the MoM data from a given sheet.\"\"\"\n",
-    "    # Get the last three months\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "    \n",
     "    mom_columns = []\n",
     "    for col in sheet.columns:\n",
     "        match = re.match(r'M(\\d{2}) (\\d{4})', col)  # Match Mxx YYYY pattern\n",
@@ -36,14 +58,11 @@
     "            year = int(match.group(2))  # Extract year\n",
     "            if (month_num, year) in last_three_months:\n",
     "                mom_columns.append(col)\n",
-    "\n",
     "    return mom_columns\n",
     "\n",
     "def process_mom_data(processed_file_path, current_month, current_year):\n",
-    "    # Load the processed file\n",
+    "    \"\"\"Process the MoM data for sheets with 'Actual' in the name.\"\"\"\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
-    "    \n",
-    "    # DataFrame to store MoM data with all columns\n",
     "    paste_df = pd.DataFrame(columns=[\n",
     "        \"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "        \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
@@ -52,11 +71,10 @@
     "    ])\n",
     "\n",
     "    for sheet_name in xls.sheet_names:\n",
-    "        if 'Actual' in sheet_name.lower():\n",
+    "        if 'Actual' in sheet_name.lower():  # Process only 'Actual' sheets\n",
     "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "            mom_columns = get_mom_data(sheet, current_month, current_year)\n",
     "\n",
-    "            # Iterate over rows and extract relevant data\n",
     "            for index, row in sheet.iterrows():\n",
     "                entity = row.get('Entity', '')\n",
     "                function = row.get('RTN Level 4', '')\n",
@@ -65,49 +83,13 @@
     "                for col in mom_columns:\n",
     "                    month_num, year = map(int, re.findall(r'\\d+', col))\n",
     "                    period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
+    "                    row_value = row[col]\n",
     "\n",
     "                    if 'DC' in sheet_name:\n",
-    "                        paste_df = paste_df.append({\n",
-    "                            \"File Name\": sheet_name,\n",
-    "                            \"Level 3\": '',\n",
-    "                            \"Level 4\": '',\n",
-    "                            \"Cost Grouping\": '',\n",
-    "                            \"Cost Type\": '',\n",
-    "                            \"Finance Region\": '',\n",
-    "                            \"Attribute Type\": 'MoM',\n",
-    "                            \"Period\": period_value,\n",
-    "                            \"Cost\": row[col],\n",
-    "                            \"FTE/Contractor\": '',\n",
-    "                            \"Country\": '',\n",
-    "                            \"Level 3.5\": '',\n",
-    "                            \"Level 4.5\": '',\n",
-    "                            \"Entity\": entity,\n",
-    "                            \"Function\": function,\n",
-    "                            \"Mapped Country\": '',\n",
-    "                            \"MICA\": mica\n",
-    "                        }, ignore_index=True)\n",
+    "                        paste_df = append_data_to_df(paste_df, sheet_name, period_value, row_value, entity, function, mica, 'Cost')\n",
     "                    elif 'HC' in sheet_name:\n",
-    "                        paste_df = paste_df.append({\n",
-    "                            \"File Name\": sheet_name,\n",
-    "                            \"Level 3\": '',\n",
-    "                            \"Level 4\": '',\n",
-    "                            \"Cost Grouping\": '',\n",
-    "                            \"Cost Type\": '',\n",
-    "                            \"Finance Region\": '',\n",
-    "                            \"Attribute Type\": 'MoM',\n",
-    "                            \"Period\": period_value,\n",
-    "                            \"Cost\": '',\n",
-    "                            \"FTE/Contractor\": row[col],\n",
-    "                            \"Country\": '',\n",
-    "                            \"Level 3.5\": '',\n",
-    "                            \"Level 4.5\": '',\n",
-    "                            \"Entity\": entity,\n",
-    "                            \"Function\": function,\n",
-    "                            \"Mapped Country\": '',\n",
-    "                            \"MICA\": mica\n",
-    "                        }, ignore_index=True)\n",
+    "                        paste_df = append_data_to_df(paste_df, sheet_name, period_value, row_value, entity, function, mica, 'FTE/Contractor')\n",
     "\n",
-    "    # Return the final DataFrame\n",
     "    return paste_df\n",
     "\n",
     "# Example usage\n",
@@ -116,7 +98,7 @@
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
     "paste_df = process_mom_data(processed_file_path, current_month, current_year)\n",
     "\n",
-    "# Now you can write the DataFrame to a new sheet\n",
+    "# Write the DataFrame to a new sheet\n",
     "paste_df.to_excel('Paste_MoM.xlsx', index=False)\n"
    ]
   },
